--- a/Java/面试题.md
+++ b/Java/面试题.md
@@ -1,7 +1,85 @@
+#### 值传递
+
+```
+基本类型
+在方法内部对变量的修改不会影响外部变量
+
+引用类型
+在方法内部对形参重新指向另一个对象对实参没有任何影响
+```
+
+
+
+---
+
+
+
+#### 为什么父集合不能多态子集合
+
+```java
+public class Animal {
+  public void eat() {...}
+}
+public class Cat extends Animal {
+  public void jump() {...}
+}
+public class Dog extends Animal {
+  public void speak() {...}
+}
+
+public class Test {
+  public void check(List<Animal> animals){
+    for(Animal animal : animals){
+      Dog dog = (Dog) animal;
+      dog.speak();
+    }
+  }
+
+  public static void main(String[] args) {
+    List<Dog> dogs = new ArrayList<>();
+    /**
+     * 这行代码会编译失败
+     * 假设我们能够编译通过,则表示check方法可以接受List<Dog>类型,同理那么check方法也可以接受List<Cat>类型
+     * 那么如果传入List<Cat>类型的对象,check方法内部强制类型转换的类型却是Dog类型,就会出现转换失败
+     */
+    new Test().check(dogs);
+  }
+}
+```
+
+
+
+---
+
+
+
 #### Java为什么不允许多继承?
 
 ```java
 A1有个a方法,A2也有个a方法
 假设允许多继承,A3继承A1和A2,那么调用a方法就会产生歧义
+```
+
+---
+
+
+
+#### equals方法和hashCode方法
+
+两者区别
+
+```java
+默认的equals方法是判断两个引用是否指向堆中同一个对象,相当于==
+equals相等,则hashCode也要相等,所以重写对象的equals方法的时候,一定要重写hashCode方法
+hashCode相等,则equals不一定相等
+```
+
+hashCode方法返回的是不是内存地址?
+
+```java
+hashCode方法上面有一个说明:如果两个对象通过equal方法比较不相等,不比保证这两个对象调用hashCode方法也不相等
+  
+每个对象的内存地址不一样,如果hashCode方法返回的是内存地址,那么每个对象的hashCode方法返回值也一定不相等
+这与上面的说明冲突了,所以hashCode方法返回的不是内存地址
 ```
 
