--- a/RocketMQ/源码解析/源码解析1.1-发送消息相关类的初始化.md
+++ b/RocketMQ/源码解析/源码解析1.1-发送消息相关类的初始化.md
@@ -1,7 +1,6 @@
-```java
-为了方便代码阅读,方法中的异常就不列出来了
+基于Producer发送同步消息进行源码分析
 
-基于同步发送进行源码解析
+```java
 DefaultMQProducer producer = new DefaultMQProducer(PRODUCER_GROUP);
 producer.setNamesrvAddr("localhost:9876");
 producer.start();
@@ -11,99 +10,6 @@ producer.shutdown();
 ```
 
 ---
-
-### 相关类
-
-#### ClientConfig
-
-```java
-public class ClientConfig {
-	private String namesrvAddr = NameServerAddressUtils.getNameServerAddresses();
-}
-```
-
-#### DefaultMQProducer
-
-```java
-public class DefaultMQProducer extends ClientConfig implements MQProducer {
-  protected final transient DefaultMQProducerImpl defaultMQProducerImpl;
-  private String producerGroup;
-  private volatile int defaultTopicQueueNums = 4; //队列数量
-  private int sendMsgTimeout = 3000; //超时时间
-  
-	public DefaultMQProducer(final String namespace, final String producerGroup, RPCHook rpcHook) {
-  	this.producerGroup = producerGroup;
-  	defaultMQProducerImpl = new DefaultMQProducerImpl(this, rpcHook);
-	}
-}
-```
-
-#### DefaultMQProducerImpl
-
-```java
-public class DefaultMQProducerImpl implements MQProducerInner {
-  private final DefaultMQProducer defaultMQProducer;
-  
-  //<Topic, TopicPublishInfo>
-  private final ConcurrentMap<String, TopicPublishInfo> topicPublishInfoTable = new ConcurrentHashMap<>();
-  
-  private MQClientInstance mQClientFactory;
-}
-```
-
-#### TopicPublishInfo
-
-```java
-public class TopicPublishInfo {
-  private List<MessageQueue> messageQueueList = new ArrayList<MessageQueue>();
-  private volatile ThreadLocalIndex sendWhichQueue = new ThreadLocalIndex();
-  private TopicRouteData topicRouteData;
-}
-```
-
-#### TopicRouteData
-
-```java
-public class TopicRouteData extends RemotingSerializable {
-	private List<QueueData> queueDatas;
-  private List<BrokerData> brokerDatas;
-}
-```
-
-#### QueueData
-
-```java
-public class QueueData implements Comparable<QueueData> {
-  private String brokerName; 	//"dlinkaCGdeMacBook-Pro.local"
-  private int readQueueNums; 	//"4"
-  private int writeQueueNums; //"4"
-  private int perm; 					//"6"
-}
-```
-
-#### BrokerData
-
-```java
-public class BrokerData implements Comparable<BrokerData> {
-  private String cluster; 									 //"DefaultCluster"
-  private String brokerName;                 //"dlinkaCGdeMacBook-Pro.local"
-  private HashMap<Long, String> brokerAddrs; //"0:10.0.161.163:10911(BrokerId:BrokerAddress)"
-}
-```
-
-#### MessageQueue
-
-```java
-public class MessageQueue implements Comparable<MessageQueue>, Serializable {
-	private String topic;
-	private String brokerName;
-	private int queueId;
-}
-```
-
----
-
-### 源码解析
 
 #### 1.DefaultMQProducer#start
 
@@ -122,22 +28,14 @@ public void start() {
 ↓
 ↓
 public void start(final boolean startFactory) {
-  switch (this.serviceState) {
-    case CREATE_JUST:
-      
-      this.mQClientFactory = MQClientManager.getInstance().getOrCreateMQClientInstance(
-        this.defaultMQProducer,
-        rpcHook
-      ); //3
-			
-      //MQClientInstance#producerTable
-      boolean registerOK = mQClientFactory.registerProducer(this.defaultMQProducer.getProducerGroup(), this);
-      
-      if (startFactory) {
-        mQClientFactory.start(); //4
-      }
-      break;
-  }
+  this.mQClientFactory = MQClientManager.getInstance().getOrCreateMQClientInstance(
+    this.defaultMQProducer,
+		null
+  ); //3
+  
+  mQClientFactory.registerProducer(this.defaultMQProducer.getProducerGroup(), this); //4
+  
+  mQClientFactory.start(); //5
 }
 ```
 
@@ -145,31 +43,36 @@ public void start(final boolean startFactory) {
 
 ```java
 public MQClientInstance getOrCreateMQClientInstance(final ClientConfig clientConfig, RPCHook rpcHook) {
-  String clientId = clientConfig.buildMQClientId();
-  
+  String clientId = clientConfig.buildMQClientId(); //ip@pid
   MQClientInstance instance = this.factoryTable.get(clientId);
   if (null == instance) {
-    instance = new MQClientInstance(
-      clientConfig.cloneClientConfig(), //DefaultMQProducer
-      this.factoryIndexGenerator.getAndIncrement(),
-      clientId, //"IP@PID"
-      rpcHook
-    );
+    instance = new MQClientInstance(clientConfig.cloneClientConfig(), 
+                                    this.factoryIndexGenerator.getAndIncrement(),
+                                    clientId,
+                                    null);
+    this.factoryTable.putIfAbsent(clientId, instance);
   }
-  return instance;
 }
 ```
 
-#### 4.MQClientInstance#start
+#### 4.MQClientInstance#registerProducer
+
+```java
+public boolean registerProducer(final String group, final DefaultMQProducerImpl producer) {
+	this.producerTable.putIfAbsent(group, producer);
+}
+```
+
+#### 5.MQClientInstance#start
 
 ```java
 public void start() {
-  switch (this.serviceState) {
-    case CREATE_JUST:
-      this.mQClientAPIImpl.start();
-      this.pullMessageService.start();
-      break;
-  } 
+  // Start request-response channel
+  this.mQClientAPIImpl.start();
+  // Start various schedule tasks
+  this.startScheduledTask();
+  // Start rebalance service(客户端消费负载均衡)
+  this.rebalanceService.start();
 }
 ```
 
