--- a/RocketMQ/源码解析/源码解析1.2-发送消息.md
+++ b/RocketMQ/源码解析/源码解析1.2-发送消息.md
@@ -12,9 +12,10 @@ public SendResult send(Message msg) {
 }
 ↓
 ↓
-//DefaultMQProducerImpl#send
 public SendResult send(Message msg, long timeout) {
-  //同步发送消息
+  //CommunicationMode.SYNC同步发送消息
+  //CommunicationMode.ASYNC异步发送消息
+  //CommunicationMode.ONEWAY单向发送消息
   return this.sendDefaultImpl(msg, CommunicationMode.SYNC, null, timeout);
 }
 ↓
@@ -24,15 +25,13 @@ private SendResult sendDefaultImpl(Message msg,
                                    final CommunicationMode communicationMode,
                                    final SendCallback sendCallback,
                                    final long timeout) {
-  //获取TopicPublishInfo
-	TopicPublishInfo topicPublishInfo = this.tryToFindTopicPublishInfo(msg.getTopic()); //2
+	TopicPublishInfo topicPublishInfo = this.tryToFindTopicPublishInfo(msg.getTopic()); //1.3-通过主题获取路由信息
   
-  //根据TopicPublishInfo随机选择一个MessageQueue
-	MessageQueue mqSelected = this.selectOneMessageQueue(topicPublishInfo, lastBrokerName); //3
+  //随机选择一个MessageQueue队列进行消息发送
+	MessageQueue mqSelected = this.selectOneMessageQueue(topicPublishInfo, null); //3
   
-  //发送
 	SendResult sendResult = this.sendKernelImpl(msg, mq, communicationMode, sendCallback, topicPublishInfo, timeout - costTime); //4
-  
+
   switch (communicationMode) {
   	case SYNC:
       //直接返回
@@ -41,145 +40,30 @@ private SendResult sendDefaultImpl(Message msg,
 }
 ```
 
-#### 2.DefaultMQProducerImpl#tryToFindTopicPublishInfo
-
-```java
-private TopicPublishInfo tryToFindTopicPublishInfo(final String topic) {
-	TopicPublishInfo topicPublishInfo = this.topicPublishInfoTable.get(topic);
-  if (null == topicPublishInfo || !topicPublishInfo.ok()) {
-    //从NameServer获取TopicRouteData,然后根据TopicRouteData构建TopicPublishInfo
-    this.mQClientFactory.updateTopicRouteInfoFromNameServer(topic); //2.1
-    topicPublishInfo = this.topicPublishInfoTable.get(topic);
-  }
-
-  if (topicPublishInfo.isHaveTopicRouterInfo() || topicPublishInfo.ok()) {
-    return topicPublishInfo;
-  }
-}
-```
-
-#### 2.1.MQClientInstance#updateTopicRouteInfoFromNameServer
-
-```java
-public boolean updateTopicRouteInfoFromNameServer(final String topic) {
-  return updateTopicRouteInfoFromNameServer(topic, false, null);
-}
-↓
-↓
-public boolean updateTopicRouteInfoFromNameServer(final String topic, boolean isDefault, DefaultMQProducer defaultMQProducer) {
-  TopicRouteData topicRouteData;
-  else {
-   //从NameServer获取TopicRouteData信息
-   topicRouteData = this.mQClientAPIImpl.getTopicRouteInfoFromNameServer(topic, 1000 * 3); //2.2
-  }
-  if (topicRouteData != null) {
-  	TopicRouteData old = this.topicRouteTable.get(topic);
-		//判断和之前的TopicRouteData是否一致
-    boolean changed = topicRouteDataIsChange(old, topicRouteData);
-    
-    //如果发生变化
-    if(changed){
-      TopicRouteData cloneTopicRouteData = topicRouteData.cloneTopicRouteData();
-      
-      for (BrokerData bd : topicRouteData.getBrokerDatas()) {
-        //<brokerName:"dlinkaCGdeMacBook-Pro.local",<brokerId:"0",broker address:"10.0.161.163:10911">>
-        this.brokerAddrTable.put(bd.getBrokerName(), bd.getBrokerAddrs());
-      }
-
-      //根据TopicRouteDate创建TopicPublishInfo
-      {
-      	TopicPublishInfo publishInfo = topicRouteData2TopicPublishInfo(topic, topicRouteData);
-      	publishInfo.setHaveTopicRouterInfo(true);
-        Iterator<Entry<String, MQProducerInner>> it = this.producerTable.entrySet().iterator();
-        while (it.hasNext()) {
-          Entry<String, MQProducerInner> entry = it.next();
-          MQProducerInner impl = entry.getValue();
-					//DefaultMQProducerImpl#topicPublishInfoTable
-          impl.updateTopicPublishInfo(topic, publishInfo);
-        }
-      }
-      
-      //MQClientInstance#topicRouteTable
-      this.topicRouteTable.put(topic, cloneTopicRouteData);
-      return true;
-    }
-  }
-}
-↓
-↓
-public static TopicPublishInfo topicRouteData2TopicPublishInfo(final String topic, final TopicRouteData route) {
-	//创建TopicPublishInfo
-  TopicPublishInfo info = new TopicPublishInfo();
-  //设置TopicRouteData
-  info.setTopicRouteData(route);
-  
-  else {
-    List<QueueData> qds = route.getQueueDatas();
-    for (QueueData qd : qds) {
-      //判断是否可写
-      if (PermName.isWriteable(qd.getPerm())) {
-        //默认创建4个MessageQueue
-        for (int i = 0; i < qd.getWriteQueueNums(); i++) {
-          MessageQueue mq = new MessageQueue(topic, qd.getBrokerName(), i);
-          info.getMessageQueueList().add(mq);
-        }
-      }
-    }
-  }
-  return info;
-}
-```
-
-#### 2.2.MQClientAPIImpl#getTopicRouteInfoFromNameServer
-
-```java
-public TopicRouteData getTopicRouteInfoFromNameServer(final String topic, final long timeoutMillis) {
-  return getTopicRouteInfoFromNameServer(topic, timeoutMillis, true);
-}
-↓
-↓
-public TopicRouteData getTopicRouteInfoFromNameServer(final String topic, final long timeoutMillis, boolean allowTopicNotExist) {
-  //创建请求头
-  GetRouteInfoRequestHeader requestHeader = new GetRouteInfoRequestHeader();
-  requestHeader.setTopic(topic);
-  RemotingCommand request = RemotingCommand.createRequestCommand(RequestCode.GET_ROUTEINFO_BY_TOPIC, requestHeader);
-	
-  //从NameServer获取Topic的路由信息
-  RemotingCommand response = this.remotingClient.invokeSync(null, request, timeoutMillis);
-  
-  switch (response.getCode()) {
-  	case ResponseCode.SUCCESS: {
-      return TopicRouteData.decode(response.getBody(), TopicRouteData.class);
-    }
-  }
-}
-```
-
 #### 3.DefaultMQProducerImpl#selectOneMessageQueue
 
 ```java
 public MessageQueue selectOneMessageQueue(final TopicPublishInfo tpInfo, final String lastBrokerName) {
-  return this.mqFaultStrategy.selectOneMessageQueue(tpInfo, lastBrokerName);
+  return this.mqFaultStrategy.selectOneMessageQueue(tpInfo, null);
 }
 ↓
 ↓
 //MQFaultStrategy#selectOneMessageQueue
 public MessageQueue selectOneMessageQueue(final TopicPublishInfo tpInfo, final String lastBrokerName) {
-	return tpInfo.selectOneMessageQueue(lastBrokerName);
+	return tpInfo.selectOneMessageQueue(null);
 }
 ↓
 ↓
 //TopicPublishInfo#selectOneMessageQueue
 public MessageQueue selectOneMessageQueue(final String lastBrokerName) {
-  if (lastBrokerName == null) {
-    return selectOneMessageQueue();
-  }
+  return selectOneMessageQueue();
 }
 ↓
 ↓
-//TopicPublishInfo#selectOneMessageQueue
 public MessageQueue selectOneMessageQueue() {
+  //随机一个int
   int index = this.sendWhichQueue.getAndIncrement();
+  //对index取余,随机一个消息队列
   int pos = Math.abs(index) % this.messageQueueList.size();
   return this.messageQueueList.get(pos);
 }
@@ -189,11 +73,9 @@ public MessageQueue selectOneMessageQueue() {
 public int getAndIncrement() {
   Integer index = this.threadLocalIndex.get();
   if (null == index) {
-    //随机一个int
     index = Math.abs(random.nextInt());
     this.threadLocalIndex.set(index);
   }
-  //index + 1
   index = Math.abs(index + 1);
   this.threadLocalIndex.set(index);
   return index;
@@ -203,52 +85,45 @@ public int getAndIncrement() {
 #### 4.DefaultMQProducerImpl#sendKernelImpl
 
 ```java
-private SendResult sendKernelImpl(final Message msg, final MessageQueue mq, final CommunicationMode communicationMode, final SendCallback sendCallback, final TopicPublishInfo topicPublishInfo, final long timeout)
-  //IP:PORT
-  String brokerAddr = this.mQClientFactory.findBrokerAddressInPublish(mq.getBrokerName());
+private SendResult sendKernelImpl(final Message msg,
+                                  final MessageQueue mq,
+                                  final CommunicationMode communicationMode,
+                                  final SendCallback sendCallback,
+                                  final TopicPublishInfo topicPublishInfo,
+                                  final long timeout)
+  String brokerAddr = this.mQClientFactory.findBrokerAddressInPublish(mq.getBrokerName()); //ip:port
 
-  if(brokerAddr != null) {
-    //是否开启了"VIP"通道,默认不开启
-    brokerAddr = MixAll.brokerVIPChannel(this.defaultMQProducer.isSendMessageWithVIPChannel(), brokerAddr);
+	MessageClientIDSetter.setUniqID(msg);
 
-    try {
-      //不是批量消息,设置UNIQ_KEY
-      if (!(msg instanceof MessageBatch)) {
-        MessageClientIDSetter.setUniqID(msg);
-      }
+	//构建请求头
+  SendMessageRequestHeader requestHeader = new SendMessageRequestHeader();
+  requestHeader.setProducerGroup(this.defaultMQProducer.getProducerGroup());
+  requestHeader.setTopic(msg.getTopic());
+  requestHeader.setDefaultTopicQueueNums(4);
+  requestHeader.setQueueId(mq.getQueueId());
+  requestHeader.setSysFlag(sysFlag);
+  requestHeader.setBornTimestamp(System.currentTimeMillis());
+  requestHeader.setFlag(msg.getFlag());
+  requestHeader.setProperties(MessageDecoder.messageProperties2String(msg.getProperties()));
+  requestHeader.setReconsumeTimes(0);
+  requestHeader.setUnitMode(false);
+  requestHeader.setBatch(msg instanceof MessageBatch);
 
-      SendMessageRequestHeader requestHeader = new SendMessageRequestHeader();
-      requestHeader.setProducerGroup(this.defaultMQProducer.getProducerGroup());
-      requestHeader.setTopic(msg.getTopic());
-      requestHeader.setDefaultTopic("TBW102");
-      requestHeader.setDefaultTopicQueueNums(4);
-      requestHeader.setQueueId(mq.getQueueId());
-      requestHeader.setSysFlag(sysFlag);
-      requestHeader.setBornTimestamp(System.currentTimeMillis());
-      requestHeader.setFlag(msg.getFlag());
-      requestHeader.setProperties(MessageDecoder.messageProperties2String(msg.getProperties()));
-      requestHeader.setReconsumeTimes(0);
-      requestHeader.setUnitMode(false);
-      requestHeader.setBatch(msg instanceof MessageBatch);
-
-      SendResult sendResult = null;
-      switch (communicationMode) {
-        case SYNC:
-          sendResult = this.mQClientFactory.getMQClientAPIImpl().sendMessage(
-            brokerAddr,
-            mq.getBrokerName(),
-            msg,
-            requestHeader,
-            timeout - costTimeSync,
-            communicationMode,
-            context,
-            this);
-          break;
-      }
-      
-      return sendResult;
-    }
+  SendResult sendResult = null;
+  switch (communicationMode) {
+    case SYNC:
+      sendResult = this.mQClientFactory.getMQClientAPIImpl().sendMessage(
+        brokerAddr,
+        mq.getBrokerName(),
+        msg,
+        requestHeader,
+        timeout - costTimeSync,
+        communicationMode,
+        null,
+        this);
+      break;
   }
+  return sendResult;
 }
 ↓
 ↓
@@ -262,11 +137,10 @@ public SendResult sendMessage(
         final CommunicationMode communicationMode,
         final SendMessageContext context,
         final DefaultMQProducerImpl producer) {
-  return sendMessage(addr, brokerName, msg, requestHeader, timeoutMillis, communicationMode, null, null, null, 0, context, producer);
+  return sendMessage(addr, brokerName, msg, requestHeader, timeoutMillis, communicationMode, null, null, null, 0, null, producer);
 }
 ↓
 ↓
-//MQClientAPIImpl#sendMessage
 public SendResult sendMessage(
         final String addr,
         final String brokerName,
@@ -281,12 +155,12 @@ public SendResult sendMessage(
         final SendMessageContext context,
         final DefaultMQProducerImpl producer) {
   RemotingCommand request = null;
-  if (sendSmartMsg || msg instanceof MessageBatch) {
+  if (sendSmartMsg) {
     //轻量数据体
     SendMessageRequestHeaderV2 requestHeaderV2 = SendMessageRequestHeaderV2.createSendMessageRequestHeaderV2(requestHeader);
+    //构建请求命令
     request = RemotingCommand.createRequestCommand(RequestCode.SEND_MESSAGE_V2, requestHeaderV2);
   }
-  //设置请求体
   request.setBody(msg.getBody());
   
   switch (communicationMode) {
@@ -296,33 +170,18 @@ public SendResult sendMessage(
 }
 ↓
 ↓
-//MQClientAPIImpl#sendMessageSync
 private SendResult sendMessageSync(
         final String addr,
         final String brokerName,
         final Message msg,
         final long timeoutMillis,
         final RemotingCommand request) {
-  //发送请求
   RemotingCommand response = this.remotingClient.invokeSync(addr, request, timeoutMillis);
+  //处理响应
   return this.processSendResponse(brokerName, msg, response);
 }
 ```
 
-#### MQClientAPIImpl#sendMessage![发送Broker的消息](./DEBUG_发送消息_1.png)
-
-#### MQClientAPIImpl#sendMessageSync![发送Broker的消息](./DEBUG_发送消息_2.png)
-
-#### NettyRemotingAbstract#invokeSyncImpl
-
-![发送Broker的消息](./DEBUG_发送消息_3.png)
-
-#### RemotingCommand#encodeHeader
-
-![发送Broker的消息](./DEBUG_发送消息_4.png)
-
 ---
 
-![Wireshark](./Wireshark_发送消息_1.png)
 
-![Wireshark](./Wireshark_发送消息_2.png)
