--- a/RocketMQ/源码解析/源码解析2.1-消息存储相关类的初始化.md
+++ b/RocketMQ/源码解析/源码解析2.1-消息存储相关类的初始化.md
@@ -1,132 +1,9 @@
-### 相关类
-
-#### BrokerController
-
-```java
-public class BrokerController {
-  private MessageStore messageStore;
-  private RemotingServer remotingServer;       //消息存储Netty Server
-  private RemotingServer fastRemotingServer;   //VIP通道Netty Server
-  private ExecutorService sendMessageExecutor; //消息写入处理的线程池
-  
-  public BrokerController(final BrokerConfig brokerConfig,
-                          final NettyServerConfig nettyServerConfig,
-                          final NettyClientConfig nettyClientConfig,
-                          final MessageStoreConfig messageStoreConfig) {
-    //各种配置属性
-    this.brokerConfig = brokerConfig;
-    this.nettyServerConfig = nettyServerConfig;
-    this.nettyClientConfig = nettyClientConfig;
-    this.messageStoreConfig = messageStoreConfig;
-  }
-}
-```
-
-#### DefaultMessageStore
-
-```java
-public class DefaultMessageStore implements MessageStore {
-  
-  private final CommitLog commitLog;
-  
-  //键值对:Topic,<QueueId, ConsumeQueue>
-  private final ConcurrentMap<String, ConcurrentMap<Integer, ConsumeQueue>> consumeQueueTable;
-  
-  private final AllocateMappedFileService allocateMappedFileService; //创建CommitLog文件的线程
-  
-  private final ReputMessageService reputMessageService; //写入ConsumeQueue文件的线程
-  
-  public DefaultMessageStore(final MessageStoreConfig messageStoreConfig,
-                             final BrokerStatsManager brokerStatsManager,
-                             final MessageArrivingListener messageArrivingListener,
-                             final BrokerConfig brokerConfig) {
-    //创建AllocateMappedFileService
-    this.allocateMappedFileService = new AllocateMappedFileService(this);
-
-    //创建CommitLog
-    this.commitLog = new CommitLog(this);
-    
-    //创建ReputMessageService
-    this.reputMessageService = new ReputMessageService();
-
-    //线程启动
-    this.allocateMappedFileService.start();
-    
-    this.dispatcherList = new LinkedList<>();
-    this.dispatcherList.addLast(new CommitLogDispatcherBuildConsumeQueue());
-    this.dispatcherList.addLast(new CommitLogDispatcherBuildIndex());
-  }
-}
-```
-
-#### CommitLog
-
-```java
-public class CommitLog {
-  protected final MappedFileQueue mappedFileQueue;
-  protected final PutMessageLock putMessageLock; //并发写入消息用到的锁
-  private final AppendMessageCallback appendMessageCallback; //消息写入MMAP处理类
-
-  public CommitLog(final DefaultMessageStore defaultMessageStore) {
-    this.mappedFileQueue = new MappedFileQueue(
-      defaultMessageStore.getMessageStoreConfig().getStorePathCommitLog(), //"~/store/commitlog"
-      defaultMessageStore.getMessageStoreConfig().getMappedFileSizeCommitLog(), //"1G = 1024 * 1024 *1024"
-      defaultMessageStore.getAllocateMappedFileService());
-
-    this.appendMessageCallback = new DefaultAppendMessageCallback(defaultMessageStore.getMessageStoreConfig().getMaxMessageSize());
-    
-    //默认使用CAS锁
-    this.putMessageLock = defaultMessageStore.getMessageStoreConfig().isUseReentrantLockWhenPutMessage() ? new PutMessageReentrantLock() : new PutMessageSpinLock();
-  }
-}
-```
-
-#### MappedFileQueue
-
-```java
-public class MappedFileQueue {
-  private final CopyOnWriteArrayList<MappedFile> mappedFiles = new CopyOnWriteArrayList<>(); //MappedFile就是CommitLog文件
-  
-  public MappedFileQueue(final String storePath,
-                         int mappedFileSize,
-                         AllocateMappedFileService allocateMappedFileService) {
-    this.storePath = storePath;
-    this.mappedFileSize = mappedFileSize;
-    this.allocateMappedFileService = allocateMappedFileService;
-  }
-}
-```
-
-#### MappedFile
-
-```java
-public class MappedFile extends ReferenceResource {
-	private static final AtomicLong TOTAL_MAPPED_VIRTUAL_MEMORY = new AtomicLong(0); //创建一个CommitLog文件就增加1个G
-  private static final AtomicInteger TOTAL_MAPPED_FILES = new AtomicInteger(0); //CommitLog文件个数
-  
-  private String fileName; //文件名包含路径
-  private MappedByteBuffer mappedByteBuffer; //MMAP
-}
-```
-
----
-
-### 源码解析
-
 #### 1.BrokerStartup#main
 
 ```java
 public static void main(String[] args) {
-  start(createBrokerController(args));
-}
-↓
-↓
-public static BrokerController createBrokerController(String[] args) {
-  final BrokerController controller = new BrokerController(brokerConfig,
-                                                           nettyServerConfig,
-                                                           nettyClientConfig,
-                                                           messageStoreConfig);
-	boolean initResult = controller.initialize(); //2
+  BrokerController brokerController = createBrokerController(args); //2
+  start(brokerController);
 }
 ↓
 ↓
@@ -136,23 +13,32 @@ public static BrokerController start(BrokerController controller) {
 ↓
 ↓
 public void start() throws Exception {
-	if (this.messageStore != null) {
-    this.messageStore.start(); //3
-  }
+   this.messageStore.start(); //3
 }
 ```
 
-#### 2.BrokerController#initialize
+#### 2.BrokerStartup#createBrokerController
 
 ```java
-public boolean initialize() throws CloneNotSupportedException {
-  this.messageStore = new DefaultMessageStore(this.messageStoreConfig,
-                                              this.brokerStatsManager,
-                                              this.messageArrivingListener,
-                                              this.brokerConfig);
-
-  this.messageStore.load();
+public static BrokerController createBrokerController(String[] args) {
+  final BrokerController controller = new BrokerController(
+    brokerConfig,
+    nettyServerConfig,
+    nettyClientConfig,
+    messageStoreConfig);
   
+  controller.initialize();
+}
+↓
+↓
+public boolean initialize() {
+  this.messageStore = new DefaultMessageStore(
+    this.messageStoreConfig,
+    this.brokerStatsManager,
+    this.messageArrivingListener,
+    this.brokerConfig
+  ); //2.1
+
   //创建消息存储Netty Server
   this.remotingServer = new NettyRemotingServer(this.nettyServerConfig, this.clientHousekeepingService);
 
@@ -163,7 +49,8 @@ public boolean initialize() throws CloneNotSupportedException {
     1000 * 60,
     TimeUnit.MILLISECONDS,
     this.sendThreadPoolQueue,
-    new ThreadFactoryImpl("SendMessageThread_"));
+    new ThreadFactoryImpl("SendMessageThread_")
+  );
 
   this.registerProcessor();
 }
@@ -173,18 +60,66 @@ public void registerProcessor() {
   //消息存储处理类
   SendMessageProcessor sendProcessor = new SendMessageProcessor(this);
 	//注册Netty Server可以处理RequestCode.SEND_MESSAGE_V2请求
-  this.remotingServer.registerProcessor(RequestCode.SEND_MESSAGE_V2,
-                                        sendProcessor,
-                                        this.sendMessageExecutor); //2.1
+  //NettyRemotingServer#processorTable
+  this.remotingServer.registerProcessor(
+    RequestCode.SEND_MESSAGE_V2,
+    sendProcessor,
+    this.sendMessageExecutor
+  );
+```
+
+#### 2.1.DefaultMessageStore
+
+```java
+public DefaultMessageStore(final MessageStoreConfig messageStoreConfig,
+                           final BrokerStatsManager brokerStatsManager,
+                           final MessageArrivingListener messageArrivingListener,
+                           final BrokerConfig brokerConfig) {
+
+  this.allocateMappedFileService = new AllocateMappedFileService(this);
+
+  this.commitLog = new CommitLog(this); //2.1.1
+
+  this.reputMessageService = new ReputMessageService();
+
+  //线程启动
+  this.allocateMappedFileService.start();
+
+  this.dispatcherList = new LinkedList<>();
+  this.dispatcherList.addLast(new CommitLogDispatcherBuildConsumeQueue());
+  this.dispatcherList.addLast(new CommitLogDispatcherBuildIndex());
 }
 ```
 
-#### 2.1.NettyRemotingServer#registerProcessor
+#### 2.1.1.CommitLog
 
 ```java
-public void registerProcessor(int requestCode, NettyRequestProcessor processor, ExecutorService executor) {
-  Pair<NettyRequestProcessor, ExecutorService> pair = new Pair<>(processor, executorThis);
-  this.processorTable.put(requestCode, pair);
+public CommitLog(final DefaultMessageStore defaultMessageStore) {
+  this.mappedFileQueue = new MappedFileQueue(
+    defaultMessageStore.getMessageStoreConfig().getStorePathCommitLog(), //"~/store/commitlog"
+    defaultMessageStore.getMessageStoreConfig().getMappedFileSizeCommitLog(), //"1G = 1024 * 1024 *1024"
+    defaultMessageStore.getAllocateMappedFileService()
+  );
+
+  this.appendMessageCallback = new DefaultAppendMessageCallback(
+    defaultMessageStore.getMessageStoreConfig().getMaxMessageSize()
+  );
+
+  //默认使用CAS锁
+  this.putMessageLock = defaultMessageStore.getMessageStoreConfig().isUseReentrantLockWhenPutMessage() ?
+    new PutMessageReentrantLock() : new PutMessageSpinLock();
+}
+```
+
+#### 2.1.1.1.MappedFileQueue
+
+```java
+public MappedFileQueue(final String storePath,
+                       int mappedFileSize,
+                       AllocateMappedFileService allocateMappedFileService) {
+  this.storePath = storePath;
+  this.mappedFileSize = mappedFileSize;
+  this.allocateMappedFileService = allocateMappedFileService;
 }
 ```
 
@@ -192,7 +127,7 @@ public void registerProcessor(int requestCode, NettyRequestProcessor processor, 
 
 ```java
 public void start() throws Exception {
-  this.reputMessageService.setReputFromOffset(0);
+  //消息写入consumequeue的线程启动
 	this.reputMessageService.start();
 }
 ```
