--- a/RocketMQ/源码解析/源码解析2.3-ConsumeQueue的存储过程.md
+++ b/RocketMQ/源码解析/源码解析2.3-ConsumeQueue的存储过程.md
@@ -1,77 +1,40 @@
 #### 1.ReputMessageService#run
 
 ```java
-@Override
 public void run() {
-  while (!this.isStopped()) {
-    //间隔一毫秒
-    Thread.sleep(1);
-    this.doReput();
-  }
+  this.doReput();
 }
 ↓
 ↓
 private void doReput() {
-  //isCommitLogAvailable方法中判断reputFromOffset是否小于CommitLog的wrotePosition
+  //isCommitLogAvailable中判断reputFromOffset是否小于commitlog的最大偏移量
 	for (boolean doNext = true; this.isCommitLogAvailable() && doNext; ) {
-		SelectMappedBufferResult result = DefaultMessageStore.this.commitLog.getData(reputFromOffset); //2
-    //循环读取写入的消息
-    for (int readSize = 0; readSize < result.getSize() && doNext; ) {
-      //解析得到Topic,QueueId,ConsumeQueueOffset等值
-      DispatchRequest dispatchRequest = DefaultMessageStore.this.commitLog.checkMessageAndReturnSize(
-                                                                                  result.getByteBuffer(),
-                                                                                  false,
-                                                                                  false);
-      //消息长度
-      int size = dispatchRequest.getMsgSize();
+		
+    //拿到需要写入consumequeue的ByteBuffer
+    SelectMappedBufferResult result = DefaultMessageStore.this.commitLog.getData(reputFromOffset); //2
+    
+    try {
+      for (int readSize = 0; readSize < result.getSize() && doNext; ) {
+        
+        //得到topic,queueId,commitlog偏移量,消息大小,tagCode,consumequeue偏移量等值
+        DispatchRequest dispatchRequest = DefaultMessageStore.this.commitLog.checkMessageAndReturnSize(
+          result.getByteBuffer(),
+          false,
+          false
+        );
 
-      DefaultMessageStore.this.doDispatch(dispatchRequest); //3
+        int size = dispatchRequest.getMsgSize(); //消息长度
 
-      //更新reputFromOffset,CommitLog中已被读取的消息偏移量
-      this.reputFromOffset += size;
-      //更新下次循环的位置
-      readSize += size;
+        DefaultMessageStore.this.doDispatch(dispatchRequest); //3
+
+        this.reputFromOffset += size; //增加reputFromOffset
+
+        readSize += size; //更新下次循环的位置
+      }
+    } finally {
+      result.release();
     }
 	}
-}
-↓
-↓
-//CommitLog#checkMessageAndReturnSize
-public DispatchRequest checkMessageAndReturnSize(java.nio.ByteBuffer byteBuffer,
-                                                 final boolean checkCRC,
-                                                 final boolean readBody) {
-	int totalSize = byteBuffer.getInt();
-  int magicCode = byteBuffer.getInt();
-  int queueId = byteBuffer.getInt();
-  
-  short propertiesLength = byteBuffer.getShort();
-  Map<String, String> propertiesMap = null;
-  if (propertiesLength > 0) {
-    //"KEYS"
-  	keys = propertiesMap.get(MessageConst.PROPERTY_KEYS);
-    //"UNIQ_KEY"
-    uniqKey = propertiesMap.get(MessageConst.PROPERTY_UNIQ_CLIENT_MESSAGE_ID_KEYIDX);
-    //"TAGS"
-    String tags = propertiesMap.get(MessageConst.PROPERTY_TAGS);
-    if (tags != null && tags.length() > 0) {
-      //tags的hashCode
-      tagsCode = MessageExtBrokerInner.tagsString2tagsCode(MessageExt.parseTopicFilterType(sysFlag), tags);
-    }
-  }
-  return new DispatchRequest(
-                topic,
-                queueId,
-                physicOffset,
-                totalSize,
-                tagsCode,
-                storeTimestamp,
-                queueOffset,
-                keys,
-                uniqKey,
-                sysFlag,
-                preparedTransactionOffset,
-                propertiesMap
-            );
 }
 ```
 
@@ -84,12 +47,10 @@ public SelectMappedBufferResult getData(final long offset) {
 ↓
 ↓
 public SelectMappedBufferResult getData(final long offset, final boolean returnFirstOnNotFound) {
-  //1024 * 1024 * 1024
+  //commitlog文件的大小(1024 * 1024 * 1024)
 	int mappedFileSize = this.defaultMessageStore.getMessageStoreConfig().getMappedFileSizeCommitLog();
-  //根据偏移量获取CommitLog
   MappedFile mappedFile = this.mappedFileQueue.findMappedFileByOffset(offset, returnFirstOnNotFound); //2.1
-  int pos = (int) (offset % mappedFileSize);
-  SelectMappedBufferResult result = mappedFile.selectMappedBuffer(pos); //2.2
+  SelectMappedBufferResult result = mappedFile.selectMappedBuffer(offset); //2.2
   return result;
 }
 ```
@@ -98,18 +59,10 @@ public SelectMappedBufferResult getData(final long offset, final boolean returnF
 
 ```java
 public MappedFile findMappedFileByOffset(final long offset, final boolean returnFirstOnNotFound) {
-  //根据偏移量计算第几个CommitLog文件
+  //根据偏移量计算第几个commitlog文件
   int index = (int) ((offset / this.mappedFileSize) -
                      (firstMappedFile.getFileFromOffset() / this.mappedFileSize));
-  //拿到对应的CommitLog
-  MappedFile targetFile = this.mappedFiles.get(index);
-
-  if (targetFile != null &&
-      offset >= targetFile.getFileFromOffset() &&
-      offset < targetFile.getFileFromOffset() + this.mappedFileSize) {
-    //返回CommitLog
-    return targetFile;
-  }
+  return this.mappedFiles.get(index);
 }
 ```
 
@@ -117,9 +70,9 @@ public MappedFile findMappedFileByOffset(final long offset, final boolean return
 
 ```java
 public SelectMappedBufferResult selectMappedBuffer(int pos) {
-  //获取当前CommitLog的wrotePosition
+  //获取当前commitlog的最大写入偏移量
   int readPosition = getReadPosition();
-  //这里就是截断需要写入ConsumeQueue的ByteBuffer
+
   ByteBuffer byteBuffer = this.mappedByteBuffer.slice();
   byteBuffer.position(pos);
   int size = readPosition - pos;
@@ -136,6 +89,7 @@ public SelectMappedBufferResult selectMappedBuffer(int pos) {
 
 ```java
 public void doDispatch(DispatchRequest req) {
+  //dispatcherList中包含consumequeue、indexfile的构建
   for (CommitLogDispatcher dispatcher : this.dispatcherList) {
 		dispatcher.dispatch(req);
 	}
@@ -144,19 +98,12 @@ public void doDispatch(DispatchRequest req) {
 ↓
 //CommitLogDispatcherBuildConsumeQueue#dispatch
 public void dispatch(DispatchRequest request) {
-	final int tranType = MessageSysFlag.getTransactionValue(request.getSysFlag());
-  switch (tranType) {
-    case MessageSysFlag.TRANSACTION_NOT_TYPE:
-    case MessageSysFlag.TRANSACTION_COMMIT_TYPE:
-      DefaultMessageStore.this.putMessagePositionInfo(request);
-      break;
-  }
+  DefaultMessageStore.this.putMessagePositionInfo(request);
 }
 ↓
 ↓
 //DefaultMessageStore#putMessagePositionInfo
 public void putMessagePositionInfo(DispatchRequest dispatchRequest) {
-	//根据Topic和QueueId获取ConsumeQueue文件
   ConsumeQueue cq = this.findConsumeQueue(dispatchRequest.getTopic(), dispatchRequest.getQueueId()); //3.1
 	cq.putMessagePositionInfoWrapper(dispatchRequest); //3.2
 }
@@ -167,13 +114,14 @@ public void putMessagePositionInfo(DispatchRequest dispatchRequest) {
 ```java
 public ConsumeQueue findConsumeQueue(String topic, int queueId) {
 	ConcurrentMap<Integer, ConsumeQueue> map = consumeQueueTable.get(topic);
-	//创建一个新的
   if (null == map) {
-    ...
+    ConcurrentMap<Integer, ConsumeQueue> newMap = new ConcurrentHashMap<Integer, ConsumeQueue>(128);
+    consumeQueueTable.putIfAbsent(topic, newMap);
+    map = newMap;
   }
+  
   ConsumeQueue logic = map.get(queueId);
   if (null == logic) {
-    //返回值
     ConsumeQueue newLogic = new ConsumeQueue(
       topic,
       queueId,
@@ -182,7 +130,10 @@ public ConsumeQueue findConsumeQueue(String topic, int queueId) {
       //6000000
       this.getMessageStoreConfig().getMappedFileSizeConsumeQueue(),
       this);
+    map.putIfAbsent(queueId, newLogic);
+    logic = newLogic;
   }
+  return logic;
 }
 ```
 
@@ -190,11 +141,12 @@ public ConsumeQueue findConsumeQueue(String topic, int queueId) {
 
 ```java
 public void putMessagePositionInfoWrapper(DispatchRequest request) {
-	long tagsCode = request.getTagsCode();
-  boolean result = this.putMessagePositionInfo(request.getCommitLogOffset(),
-                                               request.getMsgSize(),
-                                               tagsCode,
-                                               request.getConsumeQueueOffset());
+  this.putMessagePositionInfo(
+    request.getCommitLogOffset(),
+    request.getMsgSize(),
+    request.getTagsCode(),
+    request.getConsumeQueueOffset()
+  );
 }
 ↓
 ↓
@@ -202,18 +154,15 @@ private boolean putMessagePositionInfo(final long offset,
                                        final int size,
                                        final long tagsCode,
                                        final long cqOffset) {
-	//20个字节长度
-  this.byteBufferIndex.limit(CQ_STORE_UNIT_SIZE);
-	//消息在CommitLog中的偏移量
-  this.byteBufferIndex.putLong(offset);
-  //消息的长度
-  this.byteBufferIndex.putInt(size);
-  this.byteBufferIndex.putLong(tagsCode);
+	this.byteBufferIndex.flip();
+  this.byteBufferIndex.limit(CQ_STORE_UNIT_SIZE); //固定20个字节长度
+  this.byteBufferIndex.putLong(offset);          	//消息在commitlog中的偏移量
+  this.byteBufferIndex.putInt(size);              //消息的总长度
+  this.byteBufferIndex.putLong(tagsCode);         //消息的tag
   
   final long expectLogicOffset = cqOffset * CQ_STORE_UNIT_SIZE;
-  MappedFile mappedFile = this.mappedFileQueue.getLastMappedFile(expectLogicOffset);
-  //记录CommitLog的位置
-  this.maxPhysicOffset = offset + size;
+  MappedFile mappedFile = this.mappedFileQueue.getLastMappedFile(expectLogicOffset); //获取对应consumequeue
+  this.maxPhysicOffset = offset + size;                                              //记录CommitLog的位置
   return mappedFile.appendMessage(this.byteBufferIndex.array());
 }
 ↓
@@ -222,8 +171,7 @@ private boolean putMessagePositionInfo(final long offset,
 public boolean appendMessage(final byte[] data) {
 	int currentPos = this.wrotePosition.get();
   this.fileChannel.position(currentPos);
-  //写入
-  this.fileChannel.write(ByteBuffer.wrap(data));
+  this.fileChannel.write(ByteBuffer.wrap(data)); //这里没有使用MMAP的写入
   this.wrotePosition.addAndGet(data.length);
   return true;
 }
