--- a/RocketMQ/源码解析/源码解析4.1-消费消息相关类的初始化.md
+++ b/RocketMQ/源码解析/源码解析4.1-消费消息相关类的初始化.md
@@ -8,9 +8,14 @@ consumer.setPullBatchSize(30);             //最大拉取数量
 consumer.setConsumeMessageBatchMaxSize(1); //最大消费数量
 consumer.registerMessageListener(new MessageListenerConcurrently() {
   @Override
-  public ConsumeConcurrentlyStatus consumeMessage(List<MessageExt> msgs, ConsumeConcurrentlyContext context) {
+  public ConsumeConcurrentlyStatus consumeMessage(
+    List<MessageExt> msgs, 
+    ConsumeConcurrentlyContext context) {
     msgs.forEach((msg) -> {
-      Facility.print("{},{},{}", msg.getMsgId(), msg.getQueueId(), new String(msg.getBody()));
+      Facility.print("{},{},{}",
+                     msg.getMsgId(),
+                     msg.getQueueId(),
+                     new String(msg.getBody()));
     });
     return ConsumeConcurrentlyStatus.CONSUME_SUCCESS;
   }
@@ -20,192 +25,115 @@ consumer.start();
 
 ---
 
-### 相关类
-
-#### DefaultMQPushConsumer
-
-```java
-public class DefaultMQPushConsumer extends ClientConfig implements MQPushConsumer {
-	protected final transient DefaultMQPushConsumerImpl defaultMQPushConsumerImpl;
-  private String consumerGroup;															                             //消费者组
-  private MessageModel messageModel = MessageModel.CLUSTERING;                           //默认集群模式
-  private ConsumeFromWhere consumeFromWhere = ConsumeFromWhere.CONSUME_FROM_LAST_OFFSET; //消费位置
-	private AllocateMessageQueueStrategy allocateMessageQueueStrategy;
-  private MessageListener messageListener;																						   //消费消息
-  private OffsetStore offsetStore;
-}
-```
-
-#### DefaultMQPushConsumerImpl
-
-```java
-public class DefaultMQPushConsumerImpl implements MQConsumerInner {
-	private final DefaultMQPushConsumer defaultMQPushConsumer;
-  private final RebalanceImpl rebalanceImpl = new RebalancePushImpl(this);
-  private MQClientInstance mQClientFactory;
-  private PullAPIWrapper pullAPIWrapper;
-  private MessageListener messageListenerInner; //DefaultMQPushConsumer#messageListener
-  private OffsetStore offsetStore;
-  
-  public DefaultMQPushConsumerImpl(DefaultMQPushConsumer defaultMQPushConsumer, RPCHook rpcHook) {
-    this.defaultMQPushConsumer = defaultMQPushConsumer;
-    this.pullTimeDelayMillsWhenException = 1000;
-  }
-}
-```
-
-#### RebalanceImpl
-
-```java
-public abstract class RebalanceImpl {
-  //<Topic, SubscriptionData>
-	protected final ConcurrentMap<String, SubscriptionData> subscriptionInner = new ConcurrentHashMap<>();
-}
-```
-
-#### RebalancePushImpl
-
-```java
-public class RebalancePushImpl extends RebalanceImpl {
-	private final DefaultMQPushConsumerImpl defaultMQPushConsumerImpl;
-}
-```
-
-#### SubscriptionData
-
-```java
-public class SubscriptionData implements Comparable<SubscriptionData> {
-  private String topic;
-  private String subString;
-}
-```
-
-
-
-
-
-
-
-#### PullMessageService
-
-```java
-public class PullMessageService extends ServiceThread {
-	private final LinkedBlockingQueue<PullRequest> pullRequestQueue = new LinkedBlockingQueue<PullRequest>();
-  private final ScheduledExecutorService scheduledExecutorService = Executors.newSingleThreadScheduledExecutor(
-    new ThreadFactory() {
-      public Thread newThread(Runnable r) {
-        return new Thread(r, "PullMessageServiceScheduledThread");
-      }
-    });
-}
-```
-
----
-
-### 源码解析
-
 #### 1.DefaultMQPushConsumer#start
 
 ```java
-public void start() throws MQClientException {
-	this.defaultMQPushConsumerImpl.start();
+public void start() {
+  this.defaultMQPushConsumerImpl.start();
 }
-```
-
-#### 2.DefaultMQPushConsumerImpl#start
-
-```java
+↓
+↓
 public synchronized void start() {
-  switch (this.serviceState) {
-    case CREATE_JUST:
-      
-      this.copySubscription(); //3
-      
-      //生产者和消费者公用一个实例
-		  this.mQClientFactory = MQClientManager.getInstance().getOrCreateMQClientInstance(
-        this.defaultMQPushConsumer,                                                                                
-        this.rpcHook
-      );
+  this.copySubscription(); //2
+
+  this.defaultMQPushConsumer.changeInstanceNameToPID();
   
-      //负载均衡
-      this.rebalanceImpl.setConsumerGroup(this.defaultMQPushConsumer.getConsumerGroup());
-      this.rebalanceImpl.setMessageModel(this.defaultMQPushConsumer.getMessageModel());
-      this.rebalanceImpl.setAllocateMessageQueueStrategy(this.defaultMQPushConsumer.getAllocateMessageQueueStrategy());
-      this.rebalanceImpl.setmQClientFactory(this.mQClientFactory);
+  //创建MQClientInstance
+  this.mQClientFactory = MQClientManager.getInstance().getOrCreateMQClientInstance(
+    this.defaultMQPushConsumer,
+    this.rpcHook
+  );
 
-      this.pullAPIWrapper = new PullAPIWrapper(mQClientFactory, this.defaultMQPushConsumer.getConsumerGroup(), isUnitMode());
-      
-      switch (this.defaultMQPushConsumer.getMessageModel()) {
-        case BROADCASTING:
-          this.offsetStore = new LocalFileOffsetStore(this.mQClientFactory, this.defaultMQPushConsumer.getConsumerGroup());
-          break;
-        case CLUSTERING:
-          this.offsetStore = new RemoteBrokerOffsetStore(this.mQClientFactory, this.defaultMQPushConsumer.getConsumerGroup());
-          break;
-        default:
-          break;
-      }
-      this.defaultMQPushConsumer.setOffsetStore(this.offsetStore);
-      this.offsetStore.load();
-      
-  		boolean registerOK = mQClientFactory.registerConsumer(this.defaultMQPushConsumer.getConsumerGroup(), this); //4
+  //配置消费队列负载均衡
+  this.rebalanceImpl.setConsumerGroup(this.defaultMQPushConsumer.getConsumerGroup());
+  this.rebalanceImpl.setMessageModel(this.defaultMQPushConsumer.getMessageModel());
+  this.rebalanceImpl.setAllocateMessageQueueStrategy(this.defaultMQPushConsumer.getAllocateMessageQueueStrategy());
+  this.rebalanceImpl.setmQClientFactory(this.mQClientFactory);
 
-      mQClientFactory.start();
-      this.serviceState = ServiceState.RUNNING;
-      break;
+  this.pullAPIWrapper = new PullAPIWrapper(
+    mQClientFactory,
+    this.defaultMQPushConsumer.getConsumerGroup(),
+    isUnitMode()
+  );
+
+  //消息消费进度的类
+  this.offsetStore = new RemoteBrokerOffsetStore(
+    this.mQClientFactory, 
+    this.defaultMQPushConsumer.getConsumerGroup()
+  );
+  this.defaultMQPushConsumer.setOffsetStore(this.offsetStore);
+
+  //并发消费消息
+  else if (this.getMessageListenerInner() instanceof MessageListenerConcurrently) {
+    this.consumeOrderly = false;
+    this.consumeMessageService = new ConsumeMessageConcurrentlyService(
+      this,
+      (MessageListenerConcurrently) this.getMessageListenerInner()
+    );
   }
+  this.consumeMessageService.start();
+
+  mQClientFactory.registerConsumer(this.defaultMQPushConsumer.getConsumerGroup(),
+                                                        this);
+  mQClientFactory.start(); //3
+  
+  this.updateTopicSubscribeInfoWhenSubscriptionChanged();   //立即更新TopicRouteData
+  this.mQClientFactory.sendHeartbeatToAllBrokerWithLock();  //做一次心跳
+  this.mQClientFactory.rebalanceImmediately();              //立即进行队列的负载均衡
 }
 ```
 
-#### 3.DefaultMQPushConsumerImpl#copySubscription
+#### 2.DefaultMQPushConsumerImpl#copySubscription
 
 ```java
 private void copySubscription() {
-  switch (this.defaultMQPushConsumer.getMessageModel()) {
-    case BROADCASTING:
-      break;
-    case CLUSTERING:
-      //"%RETRY%CONSUMER_1"
-      final String retryTopic = MixAll.getRetryTopic(this.defaultMQPushConsumer.getConsumerGroup());
-      SubscriptionData subscriptionData = FilterAPI.buildSubscriptionData(this.defaultMQPushConsumer.getConsumerGroup(),
-                                                                          retryTopic,
-                                                                          SubscriptionData.SUB_ALL);
-      this.rebalanceImpl.getSubscriptionInner().put(retryTopic, subscriptionData);
-      break;
-  }   
+  case CLUSTERING:
+	  final String retryTopic = MixAll.getRetryTopic(this.defaultMQPushConsumer.getConsumerGroup()); //"%RETRY%CONSUMER_1"
+  
+  	SubscriptionData subscriptionData = FilterAPI.buildSubscriptionData(
+      this.defaultMQPushConsumer.getConsumerGroup(),
+      retryTopic,
+      SubscriptionData.SUB_ALL
+    );
+
+  this.rebalanceImpl.getSubscriptionInner().put(retryTopic, subscriptionData);
 }
 ```
-
-
-
-#### 4.MQClientInstance#registerConsumer
-
-```java
-public boolean registerConsumer(final String group, final MQConsumerInner consumer) {
-  MQConsumerInner prev = this.consumerTable.putIfAbsent(group, consumer);
-  return true;
-}
-```
-
-
-
-
-
-
-
-
 
 #### 3.MQClientInstance#start
 
 ```java
 public void start() {
-  synchronized (this) {
-    switch (this.serviceState) {
-      case CREATE_JUST:
-   			this.pullMessageService.start();
-        this.rebalanceService.start();
-    }
+  switch (this.serviceState) {
+    case CREATE_JUST:
+      // Start request-response channel
+      this.mQClientAPIImpl.start();
+      // Start various schedule tasks
+      this.startScheduledTask();
+      //消息拉取线程启动
+      this.pullMessageService.start();
+      //负载均衡任务启动
+      this.rebalanceService.start();
+      // Start push service
+      this.defaultMQProducer.getDefaultMQProducerImpl().start(false);
   }
+}
+↓
+↓
+private void startScheduledTask() {
+  //每30秒更新一下主题的路由信息
+  this.scheduledExecutorService.scheduleAtFixedRate(new Runnable() {
+    public void run() {
+        MQClientInstance.this.updateTopicRouteInfoFromNameServer();
+    }
+  }, 10, this.clientConfig.getPollNameServerInterval(), TimeUnit.MILLISECONDS);
+  
+  //每5秒持久化一次消费进度
+  this.scheduledExecutorService.scheduleAtFixedRate(new Runnable() {
+    public void run() {
+      MQClientInstance.this.persistAllConsumerOffset();
+    }
+  }, 1000 * 10, this.clientConfig.getPersistConsumerOffsetInterval(), TimeUnit.MILLISECONDS);
 }
 ```
 
