--- a/操作系统/概念.md
+++ b/操作系统/概念.md
@@ -1,30 +1,23 @@
-#### DMA
+#### DMA(Direct Memory Access)
 
 ```
-Direct Memory Access,直接内存存取
-CPU老哥太累了,所以找了个小弟,就是DMA替他完成一部分工作,这样CPU就能去做其他事情了
-```
-
-#### 内核态和用户态
-
-```
-女同学想让你修个电脑,但是宿管阿姨不放你进女生宿舍,这个时候你就是用户态
-你不能进女生宿舍,所以你只能让宿管阿姨来帮你把电脑取出来,这个时候宿管阿姨内核态
+DMA顶替CPU去完成内存存取工作
 ```
 
 #### 内存
 
 ```
 内存存储单元是一个字节
-内存地址(Memory Address)属于线程地址,使用十六进制表示内存地址,比如0x1A010CB0
-内存地址的上限与计算机的位数有关,例如32位机器地址范围位0x00000000 到0xFFFFFFFF
-内存读取属于随机读取(Random Access Memoery),也就是读取时间于数据所在位置无关
+
+内存地址属于线性地址，使用十六进制表示内存地址，内存地址的上限与计算机的位数有关,例如32位机器地址范围位0x00000000到0xFFFFFFFF
+
+内存读取属于随机读取（Random Access Memoery），即读取时间于数据所在位置无关
 ```
 
 #### 虚拟内存地址
 
 ```
-进程是不能直接读写内存地址,进程只能通过虚拟内存地址来进行读写内存地址
+进程是不能直接读写内存地址，进程只能通过虚拟内存地址来进行读写内存地址
 操作系统会把虚拟内存地址翻译成相应的内存地址
 ```
 
@@ -48,48 +41,3 @@ Linux把内存分割成页来管理,每页可以存放4096个字节,4KB
 预读机制,顺序读的速度快于随机读,顺序写的速度快于随机写
 ```
 
-#### 零拷贝(mmap和sendFile)
-
-```
-所谓零拷贝,就是用户态与内核态的数据拷贝的次数为零.省去从内核态复制到用户态的过程.
-```
-
-**传统IO**
-
-```
-4次上下文切换(用户态 -> 内核态 -> 用户态 -> 内核态 -> 用户态)
-4次拷贝
-1.磁盘文件 DMA拷贝 到内核缓冲区
-2.内核缓冲区 CPU拷贝 到用户缓冲区
-3.用户缓冲区 CPU拷贝 到Socket缓冲区
-4.Socket缓冲区 DMA拷贝 到协议引擎
-```
-
-![传统IO](./传统IO.png)
-
-**mmap**
-
-```
-mmap将磁盘文件映射到内存,支持读和写,对内存的操作会反映在磁盘文件上,适合小数据量读写
-
-4次上下文切换(用户态 -> 内核态 -> 用户态 -> 内核态 -> 用户态)
-3次拷贝
-1.磁盘文件 DMA拷贝 到内核缓冲区
-2.内核缓冲区 CPU拷贝 到Socket缓冲区
-3.Socket缓冲区 DMA拷贝 到协议引擎
-```
-
-![mmap](./mmap.png)
-
-**sendFile**
-
-```
-sendfile适合大文件传输
-
-2次上下文切换(用户态 -> 内核态 -> 用户态)
-2次拷贝
-1.磁盘文件 DMA拷贝 到内核缓冲区
-2.内核缓冲区 DMA拷贝 到协议引擎
-```
-
-![sendFile](./sendFile.png)
