--- a/RocketMQ/源码解析/源码解析2.4-IndexFile的存储过程.md
+++ b/RocketMQ/源码解析/源码解析2.4-IndexFile的存储过程.md
@@ -2,9 +2,7 @@
 
 ```java
 public void dispatch(DispatchRequest request) {
-  if (DefaultMessageStore.this.messageStoreConfig.isMessageIndexEnable()) {
-    DefaultMessageStore.this.indexService.buildIndex(request);
-  }
+  DefaultMessageStore.this.indexService.buildIndex(request);
 }
 ```
 
@@ -13,21 +11,30 @@ public void dispatch(DispatchRequest request) {
 ```java
 public void buildIndex(DispatchRequest req) {
 	IndexFile indexFile = retryGetAndCreateIndexFile(); //3
+
   DispatchRequest msg = req;
   String topic = msg.getTopic();
-
+	String keys = msg.getKeys();
+  
   if (req.getUniqKey() != null) {
-    //TOPIC + "#" + UNIQ_KEY
+    //topic + "#" + UNIQ_KEY
     indexFile = putKey(indexFile, msg, buildKey(topic, req.getUniqKey()));
+  }
+  
+  if (keys != null && keys.length() > 0) {
+    String[] keyset = keys.split(MessageConst.KEY_SEPARATOR);
+    for (int i = 0; i < keyset.length; i++) {
+      String key = keyset[i];
+      if (key.length() > 0) {
+        indexFile = putKey(indexFile, msg, buildKey(topic, key));
+      }
+    }
   }
 }
 ↓
 ↓
 private IndexFile putKey(IndexFile indexFile, DispatchRequest msg, String idxKey) {
-	for (boolean ok = indexFile.putKey(idxKey,
-                                     msg.getCommitLogOffset(),
-                                     msg.getStoreTimestamp());
-       !ok; ) //4
+  for (boolean ok = indexFile.putKey(idxKey, msg.getCommitLogOffset(), msg.getStoreTimestamp()); !ok; ){ } //4
 }
 ```
 
@@ -35,26 +42,24 @@ private IndexFile putKey(IndexFile indexFile, DispatchRequest msg, String idxKey
 
 ```java
 public IndexFile retryGetAndCreateIndexFile() {
-	indexFile = this.getAndCreateLastIndexFile();
-  return indexFile;
+  return this.getAndCreateLastIndexFile();
 }
 ↓
 ↓
 public IndexFile getAndCreateLastIndexFile() {
-	if (indexFile == null) {
-    //"/Users/dlinka/store/index/当前时间"
-  	String fileName = this.storePath 
-      												+ File.separator
-															+ UtilAll.timeMillisToHumanString(System.currentTimeMillis());
-    indexFile = new IndexFile(fileName,
-                              this.hashSlotNum, //5000000
-                              this.indexNum, //5000000 * 4
-                              lastUpdateEndPhyOffset, //0
-                              lastUpdateIndexTimestamp //0
-                             );
-    this.indexFileList.add(indexFile);
-    return indexFile;
-  }
+  String fileName = this.storePath + File.separator+ UtilAll.timeMillisToHumanString(System.currentTimeMillis());
+  
+  IndexFile indexFile = new IndexFile(
+    fileName,         ///Users/dlinka/store/index/20220128105218019
+    this.hashSlotNum, //5000000
+    this.indexNum,    //5000000 * 4
+    0,
+    0
+  );
+  
+  this.indexFileList.add(indexFile);
+  
+  return indexFile;
 }
 ↓
 ↓
@@ -63,11 +68,13 @@ public IndexFile(final String fileName,
                  final int indexNum,
                  final long endPhyOffset,
                  final long endTimestamp) {
-  //40 + 5000000 * 4 + 20000000 * 20
+  //头大小(40) + 槽总长(5000000 * 4) + 索引总长(20000000 * 20)
   int fileTotalSize = IndexHeader.INDEX_HEADER_SIZE + (hashSlotNum * hashSlotSize) + (indexNum * indexSize);
+
   this.mappedFile = new MappedFile(fileName, fileTotalSize);
   this.fileChannel = this.mappedFile.getFileChannel();
   this.mappedByteBuffer = this.mappedFile.getMappedByteBuffer();
+  
   this.hashSlotNum = hashSlotNum;
   this.indexNum = indexNum;
   
@@ -80,59 +87,45 @@ public IndexFile(final String fileName,
 
 ```java
 public boolean putKey(
-  //TOPIC + "#" + UNIQ_KEY										
-  final String key,
-  //CommitLog中的偏移量
-  final long phyOffset,
-  //消息存入CommitLog的时间戳
-  final long storeTimestamp) {
+  final String key,          //topic + "#" + UNIQ_KEY
+  final long phyOffset,      //commitlog的偏移量
+  final long storeTimestamp  //消息存入commitlog的时间戳
+) {
+  int keyHash = indexKeyHashMethod(key);                                       //返回key的hashcode的绝对值
+  int slotPos = keyHash % this.hashSlotNum;                                    //定位槽
+  int absSlotPos = IndexHeader.INDEX_HEADER_SIZE + slotPos * hashSlotSize;	   //槽的物理位置 = 头大小 + slotPos * 槽大小
+  
+	int slotValue = this.mappedByteBuffer.getInt(absSlotPos);                    //槽位置上的值,槽未使用则等于0
 
-  //返回key的HashCode
-  int keyHash = indexKeyHashMethod(key);
-  //对500万取余
-  int slotPos = keyHash % this.hashSlotNum;
-	//slot的位置 = 40 + 4 * slotPos
-  int absSlotPos = IndexHeader.INDEX_HEADER_SIZE + slotPos * hashSlotSize;
+	long timeDiff = storeTimestamp - this.indexHeader.getBeginTimestamp();       //消息存入commitlog的时间和第一个存入indexfile的时间差
+  timeDiff = timeDiff / 1000;                                                  //变成秒
   
-  //slot的位置上slot的值,slot未使用等于0
-	int slotValue = this.mappedByteBuffer.getInt(absSlotPos);
-  
-  //时间差值
-	long timeDiff = storeTimestamp - this.indexHeader.getBeginTimestamp();
-	//变成秒
-  timeDiff = timeDiff / 1000;
-  
-  //index的位置 = 40 + 500百万 * 4 + index个数 * 20
-  //注意this.indexHeader.getIndexCount()初始值是1
   int absIndexPos = IndexHeader.INDEX_HEADER_SIZE
-    										+ this.hashSlotNum * hashSlotSize
-                        + this.indexHeader.getIndexCount() * indexSize;
-  //写入"HashCode + CommitLog中的偏移量 + 时间差 + 前一个index的位置,第一个存放0"
-  this.mappedByteBuffer.putInt(absIndexPos, keyHash);
-	this.mappedByteBuffer.putLong(absIndexPos + 4, phyOffset);
+    + this.hashSlotNum * hashSlotSize
+    + this.indexHeader.getIndexCount() * indexSize;                            //头大小 + 所有槽大小 + 索引个数 * 索引大小
+  
+  this.mappedByteBuffer.putInt(absIndexPos, keyHash);                          //hashcode
+	this.mappedByteBuffer.putLong(absIndexPos + 4, phyOffset);                   //commitlog的偏移量
 	this.mappedByteBuffer.putInt(absIndexPos + 4 + 8, (int) timeDiff);
-	this.mappedByteBuffer.putInt(absIndexPos + 4 + 8 + 4, slotValue);
+	this.mappedByteBuffer.putInt(absIndexPos + 4 + 8 + 4, slotValue);            //前一个索引的位置
   
-  //solt中存放index的索引
-	this.mappedByteBuffer.putInt(absSlotPos, this.indexHeader.getIndexCount());
+	this.mappedByteBuffer.putInt(absSlotPos, this.indexHeader.getIndexCount());  //槽中存放当前索引数
+   
   
-  //如果是第一个写入的
   if (this.indexHeader.getIndexCount() <= 1) {
     this.indexHeader.setBeginPhyOffset(phyOffset);
-    this.indexHeader.setBeginTimestamp(storeTimestamp)
+    this.indexHeader.setBeginTimestamp(storeTimestamp);
   }
 
-  //如果是未使用的solt,增加solt个数
-  if (invalidIndex == slotValue) {
-     this.indexHeader.incHashSlotCount();
-  }
-
-  //增加Header中index的个数
-  this.indexHeader.incIndexCount();
-  this.indexHeader.setEndPhyOffset(phyOffset);
+  if (slotValue == 0) { 
+     this.indexHeader.incHashSlotCount();                                      //如果是未使用的槽,头中槽数量+1
+  } 
+  
+  this.indexHeader.incIndexCount();                                            //头中索引数量+1
+	this.indexHeader.setEndPhyOffset(phyOffset);
   this.indexHeader.setEndTimestamp(storeTimestamp);
-
-  return true;
+  
+  return true; 
 }
 ```
 
