--- a/RocketMQ/环境搭建.md
+++ b/RocketMQ/环境搭建.md
@@ -1,40 +1,52 @@
-#### 单机安装Name Server和Broker
+### 单机
 
-官方给的教程是通过source进行安装,这里使用Binary安装,下载地址:https://rocketmq.apache.org/dowloading/releases/
+官方给的教程是通过source进行安装
+
+这里使用Binary安装,下载地址:https://rocketmq.apache.org/dowloading/releases/
 
 ```sh
 #解压
 unzip rocketmq-all-4.7.1-bin-release.zip
 
-#进入bin目录
-#修改runserver.sh:-server -Xms512m -Xmx512m -Xmn256m -XX:MetaspaceSize=16m -XX:MaxMetaspaceSize=80m(每一项除以4)
+#修改
+#runserver.sh:-server -Xms512m -Xmx512m -Xmn256m -XX:MetaspaceSize=16m -XX:MaxMetaspaceSize=80m(每一项除以4)
+
 #启动Name Server
 ./mqnamesrv
 
-#修改runbroker.sh:-server -Xms512m -Xmx512m -Xmn256m
+#修改
+#runbroker.sh:-server -Xms512m -Xmx512m -Xmn256m
+
 #启动Broker
 ./mqbroker -n localhost:9876
 ```
 
-#### 安装控制台
+### 控制台
+
+[rocketmq-externals](https://github.com/apache/rocketmq-externals)
+
+#### 1.0.0
 
 ```shell
-#rocketmq-externals
 git clone git@github.com:apache/rocketmq-externals.git
 
-#切换分支release-rocketmq-console-1.0.0
+#切换分支
+git checkout release-rocketmq-console-1.0.0
 
-#修改端口:rocketmq-console/src/main/resources/application.properties
+#修改端口
+#rocketmq-console/src/main/resources/application.properties
 #server.port=8027
+#rocketmq.config.namesrvAddr=127.0.0.1:9876
 
 #打包rocketmq-console
-mvn clean package -DskipTests
+mvn clean package -Dmaven.test.skip=true
 
-#运行
-java -jar rocketmq-console-ng-1.0.0.jar --rocketmq.config.namesrvAddr=127.0.0.1:9876
+java -jar rocketmq-console-ng-1.0.0.jar
 ```
 
-#### 测试
+
+
+### 测试
 
     //修改tools.sh
     export NAMESRV_ADDR=localhost:9876
